@@ -1449,12 +1449,8 @@ function smc_saveEntities(sFormName, aElementNames, sMask)
 // A function used to clean the attachments on post page
 function cleanFileInput(idElement)
 {
-	// Simpler solutions work in Opera, but not in Firefox and IE (except sometimes!)
-	// and apparently never on Safari...
-	if (is_opera)
-	{
+	if (is_opera || is_ie)
 		document.getElementById(idElement).outerHTML = document.getElementById(idElement).outerHTML;
-	}
 	else
 	{
 		// What else can we do?
