@@ -1,5 +1,5 @@
 Changes go downward, months go upward.  Please scroll to the bottom for a legend.
-Changelog started January 1, 2004; Currently at $Revision: 10097 $.
+Changelog started January 1, 2004; Currently at $Revision: 10098 $.
 
 SMF 2.0                                                                      ???
 ================================================================================
@@ -26,6 +26,7 @@ September 2010
  & Tweaked the language string accordingly (Post english)
  ! Chose a hopefully more portable fix for cleaning file input (script.js) [Bug 3780]
  ! Cleanup - changing back all CRLF to LF (lots of files) [Bug 4439]
+ ! Add attachments cleaning for IE as well, though it allows manually deleting the file input box (script.js)
  
  
 August 2010
